[package]
name = "token-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
crossterm = "0.28.1"
serde = "1.0.207"
serde_derive = "1.0.207"
serde_json = "1.0.124"
tungstenite = "0.23.0"
solana-transaction-status = { version = "1.18.9" }
solana-program = { version = "1.18.9" }
solana-client = {version = "1.18.9"}
solana-sdk = {version = "1.18.9"}
tokio = { version = "1", features = ["full"] }
byteorder = "1.5.0"
base64 = "0.22.0"